Fix cast-align warnings in WebCore/platform/graphics/texmap/TextureMapperGL.cpp https://bugs.webkit.org/show_bug.cgi?id=118249

Reviewed by Allan Sandfeld Jensen.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/136306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152283 268f45cc-cd09-0410-ab3c-d52691b4dbfc